--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,9 @@
 		<profile>
 			<id>sonar</id>
 			<properties>
-				<sonar.sources>.</sonar.sources>
-				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
-				<sonar.exclusions>${code.coverage.exclusions}</sonar.exclusions>
-				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+				<properties>
+  					<sonar.organization>ariseaz</sonar.organization>
+  					<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 			</properties>
 			<activation>
 				<activeByDefault>false</activeByDefault>
