--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 		<profile>
 			<id>sonar</id>
 			<properties>
-				<sonar.sources>.</sonar.sources>
+				<sonar.projectKey>ariseaz_space-management-system</sonar.projectKey>
 				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
 				<sonar.exclusions>${code.coverage.exclusions}</sonar.exclusions>
 				<sonar.organization>ariseaz</sonar.organization>
