--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.1.RELEASE</version>
 	</parent>
-	<groupId>com.azeez</groupId>
+	<groupId>com.pranav</groupId>
 	<artifactId>space-management-system</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
